# nilalytics

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.githooks/: commit-msg
.github/workflows/: docs.yml  publish.yml
docs/: acknowledgements.md  architecture.md  backend.md  cli.md  configuration.md  deployment.md  identity.md  index.md  ingest-gateway.md  install.md  maintenance.md  mobile.md  querying.md  quickstart.md  security.md  storage-backends.md  user-events.md  web.md
nilalytics/: __init__.py  autocapture.py  cli.py  config.py  curate.py  emitter.py  gateway.py  identity.py  maintenance.py  query.py  retention.py  server.py  storage.py
